[package]
name = "dawn"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
actix-web = "2"
percent-encoding = "1"
log = ">=0.4.5"
json = "*"
log4rs = {version = ">= 0.5.0", features=["yaml_format"]}
mustache = "0.8"
itertools = "*"
time = "<0.2"
get_if_addrs = "*"
cookie = "0.12"
serde = "1.0"
serde_derive = "1.0"
reqwest_mock = {version="0.7"}
lazy_static = "1.2"
env_logger = "*"
actix_lambda = {optional=true, version="0.2"}
reqwest = {optional=true, version="0.11", default-features=false}
actix-rt = "1.0"

[features]
default = []
lambda = ["actix_lambda", "reqwest"]

[profile.release]
lto = true
panic = 'abort'

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//bazel"
package_aliases_dir = "bazel"