[package]
name = "dawn"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
actix-web = "4"
percent-encoding = "1"
log = ">=0.4.5"
json = "*"
log4rs = {version = ">= 0.5.0", features=["yaml_format"]}
mustache = "0.8"
itertools = "*"
time = "<0.2"
get_if_addrs = "*"
cookie = "0.16"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.2"
env_logger = "*"
actix_lambda = {optional=true, version="0.2"}
reqwest = {version="0.11", default-features=false, features=["rustls-tls", "blocking"]}
actix-rt = "2.7"

[dev-dependencies]
wiremock = "0.5"
tokio = {version="1", features=["rt", "macros"]}
serde_json = "1"

[features]
default = []
lambda = ["actix_lambda"]

[profile.release]
lto = true
panic = 'abort'

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//bazel"
package_aliases_dir = "bazel"