[package]
name = "dawn"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
actix-web = "4"
percent-encoding = "2"
log = ">=0.4.5"
log4rs = {version = ">= 1.2.0", features=["yaml_format"]}
mustache = "0.9"
itertools = "*"
time = "<0.3"
get_if_addrs = "*"
cookie = "0.16"
serde = "1"
serde_derive = "1"
serde_json = "1"
lazy_static = "1.2"
env_logger = "*"
#actix_lambda = {optional=true, version="0.2"}
reqwest = {version="0.11", default-features=false, features=["rustls-tls", "blocking"]}

[dev-dependencies]
wiremock = "0.5"
tokio = {version="1", features=["rt", "macros"]}

[features]
default = []
#lambda = ["actix_lambda"]
lambda = []

[profile.release]
lto = true
panic = 'abort'

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//bazel"
package_aliases_dir = "bazel"

[package.metadata.raze.crates.ring.'*']
compile_data_attr = "glob([\"**/*.der\"])"

[package.metadata.raze.crates.webpki.'*']
compile_data_attr = "glob([\"**/*.der\"])"

[package.metadata.raze.crates.deadpool.'*']
compile_data_attr ="[\"README.md\"]"

[package.metadata.raze.crates.deadpool-runtime.'*']
compile_data_attr ="[\"README.md\"]"