[package]
name = "actix_lambda"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
lambda_http = "0.1"
aws_lambda_events = "0.2"
reqwest = {version="0.9", features=["rustls-tls"], default-features=false}
crossbeam = "0.7"
maplit = "1"
actix-web = "0.7"
env_logger = "0.6"
log = "0.4"
url = "1.7"
serde_json = "1"